Closed Bug 825467 Opened 13 years ago Closed 13 years ago

PerfMeasurement.cpp:89:8: warning: unused variable ‘reusingGlobal’ [-Wunused-variable]

Categories

(Core :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Build warning: { toolkit/components/perf/PerfMeasurement.cpp:89:8: warning: unused variable ‘reusingGlobal’ [-Wunused-variable] } (as implicitly reported in bug 809666 comment 11)
Attached patch fixSplinter Review
This removes the unused variable & marks the directory as warning-free (which it is, on my system, after this patch is applied).
Attachment #696553 - Flags: review?(khuey)
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: