Bug 825467: Remove unused variable 'reusingGlobal' from PerfMeasurement.cpp. r=khuey