toolkit/components/perf/PerfMeasurement.cpp
@@ -86,7 +86,6 @@ Module::Call(nsIXPConnectWrappedNative* wrapper,
              jsval* vp,
              bool* _retval)
 {
-  bool reusingGlobal = Preferences::GetBool("jsloader.reuseGlobal");
   JSObject* targetObj = nullptr;
 
   mozJSComponentLoader* loader = mozJSComponentLoader::Get();
